# ccmadocchi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
arduino/ccmadocchi/: ccmadocchi.ino
ccmadocchi/: cli.py  motions.py  serial_comm.py
docs/: 2026-04-07-ccmadocchi-design.md  2026-04-07-ccmadocchi-plan.md
tests/: test_cli.py  test_motions.py  test_serial_comm.py
