[project]
name = "ccmadocchi"
version = "0.1.0"
description = "USB経由でぬいぐるみの腕をサーボモーターで動かすCLIツール"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyserial>=3.5",
]

[project.scripts]
ccmadocchi = "ccmadocchi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
